--- a/resources/style.css
+++ b/resources/style.css
@@ -903,7 +903,7 @@ input[type="radio"] {
 }
 
 select {
-    background: url(i/arrow-dropdown.svg) no-repeat right 1.5rem center;
+    background: url(/i/arrow-dropdown.svg) no-repeat right 1.5rem center;
     -webkit-background-size: 1.5rem auto;
     -moz-background-size: 1.5rem auto;
     -o-background-size: 1.5rem auto;
@@ -1688,7 +1688,7 @@ body.menu-open menu.main-menu {
 
 .video-wrap video::before {
     content: '';
-    background-image: url(i/icon-play-filled.svg);
+    background-image: url(/i/icon-play-filled.svg);
     display: none
 }
 
@@ -1717,7 +1717,7 @@ body.menu-open menu.main-menu {
 }
 
 .video-wrap .play-toggle {
-    background: url(i/icon-play.svg) 50% 50% no-repeat;
+    background: url(/i/icon-play.svg) 50% 50% no-repeat;
     -webkit-background-size: 4.4rem auto;
     -moz-background-size: 4.4rem auto;
     -o-background-size: 4.4rem auto;
@@ -1728,7 +1728,7 @@ body.menu-open menu.main-menu {
 
 .video-wrap .play-toggle:hover,
 .video-wrap .play-toggle:focus {
-    background-image: url(i/icon-play-filled.svg)
+    background-image: url(/i/icon-play-filled.svg)
 }
 
 .video-wrap .view-full {
@@ -1739,7 +1739,7 @@ body.menu-open menu.main-menu {
     width: 3rem;
     height: 3rem;
     z-index: 4;
-    background: #eeecec url(i/icon-fullscreen.svg) 50% 50% no-repeat;
+    background: #eeecec url(/i/icon-fullscreen.svg) 50% 50% no-repeat;
     -webkit-background-size: 1.5rem auto;
     -moz-background-size: 1.5rem auto;
     -o-background-size: 1.5rem auto;
@@ -2294,7 +2294,7 @@ nav .prev::before {
 
 nav .prev {
     padding: 0.1875rem 1.5rem;
-    background: url(i/arrow-left-black.svg) 0 50% no-repeat !important;
+    background: url(/i/arrow-left-black.svg) 0 50% no-repeat !important;
     -webkit-background-size: auto 2rem;
     -moz-background-size: auto 2rem;
     -o-background-size: auto 2rem;
@@ -2304,7 +2304,7 @@ nav .prev {
 nav .prev::before,
 nav .prev:hover,
 nav .prev:focus {
-    background-image: url(i/arrow-left-rust.svg) !important
+    background-image: url(/i/arrow-left-rust.svg) !important
 }
 
 @media only screen and (min-width: 700px) {
@@ -2315,7 +2315,7 @@ nav .prev:focus {
 
 nav .next {
     padding: 0.1875rem 1.5rem;
-    background: url(i/arrow-right-black.svg) 100% 50% no-repeat !important;
+    background: url(/i/arrow-right-black.svg) 100% 50% no-repeat !important;
     -webkit-background-size: auto 2rem;
     -moz-background-size: auto 2rem;
     -o-background-size: auto 2rem;
@@ -2325,7 +2325,7 @@ nav .next {
 nav .next::before,
 nav .next:hover,
 nav .next:focus {
-    background-image: url(i/arrow-right-rust.svg) !important
+    background-image: url(/i/arrow-right-rust.svg) !important
 }
 
 @media only screen and (min-width: 700px) {
@@ -2545,7 +2545,7 @@ body:not(.touchscreen) .project-filters {
         display: block;
         width: 1.5rem;
         height: 3rem;
-        background: url(i/arrow-dropdown.svg) 50% 50% no-repeat;
+        background: url(/i/arrow-dropdown.svg) 50% 50% no-repeat;
         -webkit-background-size: 1.5rem auto;
         -moz-background-size: 1.5rem auto;
         -o-background-size: 1.5rem auto;
@@ -2584,12 +2584,12 @@ body:not(.touchscreen) .project-filters {
     }
 
     .project-filters nav select {
-        background-image: url(i/arrow-dropdown-white.svg)
+        background-image: url(/i/arrow-dropdown-white.svg)
     }
 
     .project-filters nav select[data-value]:not([data-value="all"]) {
         background-color: #fff;
-        background-image: url(i/arrow-dropdown.svg);
+        background-image: url(/i/arrow-dropdown.svg);
         color: #121212
     }
 
@@ -2647,7 +2647,7 @@ body:not(.touchscreen) .project-filters {
     }
 
     .project-filters.show .show-filters::after {
-        background-image: url(i/arrow-dropdown-white.svg);
+        background-image: url(/i/arrow-dropdown-white.svg);
         -moz-transform: scaleY(-1);
         -o-transform: scaleY(-1);
         -webkit-transform: scaleY(-1);
@@ -2677,7 +2677,7 @@ body:not(.touchscreen) .project-filters {
     }
 
     .project-filters .chosen-container .chosen-single div {
-        background-image: url(i/arrow-dropdown-white.svg)
+        background-image: url(/i/arrow-dropdown-white.svg)
     }
 
     .project-filters .chosen-container:not(.chosen-with-drop):hover .chosen-single,
@@ -2691,7 +2691,7 @@ body:not(.touchscreen) .project-filters {
     }
 
     .project-filters .chosen-container[data-value]:not([data-value="all"]) .chosen-single div {
-        background-image: url(i/arrow-dropdown.svg)
+        background-image: url(/i/arrow-dropdown.svg)
     }
 
     .project-filters .chosen-container[data-value]:not([data-value="all"]).chosen-with-drop .chosen-single,
@@ -2769,7 +2769,7 @@ body:not(.touchscreen) .project-filters {
     }
 
     .project-filters .chosen-container[data-value]:not([data-value="all"]) .chosen-single div {
-        background-image: url(i/arrow-dropdown-white.svg)
+        background-image: url(/i/arrow-dropdown-white.svg)
     }
 
     .project-filters .chosen-container[data-value]:not([data-value="all"]).chosen-with-drop .chosen-single,
@@ -3187,7 +3187,7 @@ body>.fullscreen button,
 }
 
 .slideshow button.slick-prev {
-    background: url(i/arrow-left-white.svg) 50% 50% no-repeat;
+    background: url(/i/arrow-left-white.svg) 50% 50% no-repeat;
     -webkit-background-size: auto 2rem;
     -moz-background-size: auto 2rem;
     -o-background-size: auto 2rem;
@@ -3196,7 +3196,7 @@ body>.fullscreen button,
 }
 
 .slideshow button.slick-next {
-    background: url(i/arrow-right-white.svg) 50% 50% no-repeat;
+    background: url(/i/arrow-right-white.svg) 50% 50% no-repeat;
     -webkit-background-size: auto 2rem;
     -moz-background-size: auto 2rem;
     -o-background-size: auto 2rem;
@@ -3408,7 +3408,7 @@ body.touchscreen .slideshow-section .slideshow {
 
 .quote-section .slideshow button.slick-prev,
 .flexible-section .slideshow button.slick-prev {
-    background-image: url(i/arrow-left-black.svg)
+    background-image: url(/i/arrow-left-black.svg)
 }
 
 .quote-section .slideshow button.slick-prev::before,
@@ -3417,12 +3417,12 @@ body.touchscreen .slideshow-section .slideshow {
 .flexible-section .slideshow button.slick-prev::before,
 .flexible-section .slideshow button.slick-prev:hover,
 .flexible-section .slideshow button.slick-prev:focus {
-    background-image: url(i/arrow-left-rust.svg)
+    background-image: url(/i/arrow-left-rust.svg)
 }
 
 .quote-section .slideshow button.slick-next,
 .flexible-section .slideshow button.slick-next {
-    background-image: url(i/arrow-right-black.svg)
+    background-image: url(/i/arrow-right-black.svg)
 }
 
 .quote-section .slideshow button.slick-next::before,
@@ -3431,7 +3431,7 @@ body.touchscreen .slideshow-section .slideshow {
 .flexible-section .slideshow button.slick-next::before,
 .flexible-section .slideshow button.slick-next:hover,
 .flexible-section .slideshow button.slick-next:focus {
-    background-image: url(i/arrow-right-rust.svg)
+    background-image: url(/i/arrow-right-rust.svg)
 }
 
 .quote-section .slideshow .slick-dots,
@@ -4070,7 +4070,7 @@ body.search-open .modal.search-modal {
     display: block;
     width: 1.5rem;
     height: 100%;
-    background: url(i/arrow-dropdown.svg) 50% 50% no-repeat;
+    background: url(/i/arrow-dropdown.svg) 50% 50% no-repeat;
     -webkit-background-size: 1.5rem auto;
     -moz-background-size: 1.5rem auto;
     -o-background-size: 1.5rem auto;
@@ -4281,7 +4281,7 @@ body.search-open .modal.search-modal {
 }
 
 .chosen-container-active.chosen-with-drop .chosen-single div {
-    background-image: url(i/arrow-dropdown-white.svg);
+    background-image: url(/i/arrow-dropdown-white.svg);
     -moz-transform: scaleY(-1);
     -o-transform: scaleY(-1);
     -webkit-transform: scaleY(-1);
