--- a/resources/style.css
+++ b/resources/style.css
@@ -1402,6 +1402,7 @@ body[data-loading="false"] header.opaque .menu-button:focus {
         transition: all .4s ease-in-out
     }
 
+    /*
     body:not(.touchscreen).hide-header:not(.menu-open):not(.search-open) header.main-header.opaque,
     body:not(.touchscreen).hide-header:not(.menu-open):not(.search-open).subnav-fixed:not(.subnav-fixed-bottom) .subnav {
         -webkit-transform: translateY(-5rem);
@@ -1416,6 +1417,7 @@ body[data-loading="false"] header.opaque .menu-button:focus {
         will-change: auto;
         transition: all .2s ease-in-out
     }
+    */
 }
 
 menu.main-menu {
