--- a/resources/style.css
+++ b/resources/style.css
@@ -1383,8 +1383,19 @@ body.menu-open .menu-button i+i+i {
 
 body.menu-open .menu-button i,
 body.search-open .menu-button i,
-body[data-loading="false"] header.opaque .menu-button i {
-    background-color: #121212
+body[data-loading="false"] header.opaque .menu-button i 
+{
+    /*background-color: #121212*/
+    background-color: white;
+}
+
+
+body.menu-open .menu-button i:nth-child(3),
+body.search-open .menu-button i:nth-child(3),
+body[data-loading="false"] header.opaque .menu-button i:nth-child(3)
+{
+    opacity: 0;
+    transition: all 0.6s ease-in-out;
 }
 
 .menu-button:focus {
