--- a/resources/style.css
+++ b/resources/style.css
@@ -1317,97 +1317,6 @@ body[data-loading="false"] header.opaque .search-button:focus {
     transition: opacity .4s ease-in-out
 }
 
-.menu-button {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1.6rem 3rem 2.3rem;
-    display: block;
-    cursor: pointer;
-    border: 0;
-    will-change: auto;
-    transition: all .4s ease-in-out
-}
-
-.menu-button i {
-    display: block;
-    width: 2.1rem;
-    height: 1px;
-    background-color: #fff;
-    will-change: auto;
-    transition: all .4s ease-in-out
-}
-
-.menu-button i+i {
-    margin-top: 7px
-}
-
-body.menu-open .menu-button i {
-    -webkit-transform: rotate(135deg) translate3d(0, 0, 0);
-    -moz-transform: rotate(135deg) translate3d(0, 0, 0);
-    -ms-transform: rotate(135deg) translate3d(0, 0, 0);
-    -o-transform: rotate(135deg) translate3d(0, 0, 0);
-    transform: rotate(135deg) translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    margin-top: 8px
-}
-
-body.menu-open .menu-button i+i {
-    -webkit-transform: rotate(-135deg) translate3d(0, 0, 0);
-    -moz-transform: rotate(-135deg) translate3d(0, 0, 0);
-    -ms-transform: rotate(-135deg) translate3d(0, 0, 0);
-    -o-transform: rotate(-135deg) translate3d(0, 0, 0);
-    transform: rotate(-135deg) translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    margin-top: -1px
-}
-
-body.menu-open .menu-button i+i+i {
-    -webkit-transform: translateY(2.5rem) translate3d(0, 0, 0);
-    -moz-transform: translateY(2.5rem) translate3d(0, 0, 0);
-    -ms-transform: translateY(2.5rem) translate3d(0, 0, 0);
-    -o-transform: translateY(2.5rem) translate3d(0, 0, 0);
-    transform: translateY(2.5rem) translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    margin: 0
-}
-
-body.menu-open .menu-button i,
-body.search-open .menu-button i,
-body[data-loading="false"] header.opaque .menu-button i 
-{
-    /*background-color: #121212*/
-    background-color: white;
-}
-
-
-body.menu-open .menu-button i:nth-child(3),
-body.search-open .menu-button i:nth-child(3),
-body[data-loading="false"] header.opaque .menu-button i:nth-child(3)
-{
-    opacity: 0;
-    transition: all 0.6s ease-in-out;
-}
-
-.menu-button:focus {
-    background-color: rgba(255, 255, 255, 0.25)
-}
-
-body.menu-open .menu-button:focus,
-body.search-open .menu-button:focus,
-body[data-loading="false"] header.opaque .menu-button:focus {
-    background-color: rgba(18, 18, 18, 0.25)
-}
-
 @media all and (orientation: landscape) {
 
     body:not(.touchscreen) header,
@@ -4877,10 +4786,6 @@ pre.admin-pre {
 }
 
 
-body.project-view button.menu-button {
-    display: none;
-}
-
 
 /*from index.html BEGIN*/
 
@@ -5249,3 +5154,145 @@ body .is-layout-grid>* {
     line-height: 1.6;
 }
 /*from index.html END*/
+
+
+
+body.project-view button.menu-button {
+    display: none;
+}
+.menu-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1.6rem 3rem 2.3rem;
+    display: block;
+    cursor: pointer;
+    border: 0;
+    will-change: auto;
+    transition: all .4s ease-in-out
+}
+
+.menu-button i {
+    display: block;
+    width: 2.1rem;
+    height: 1px;
+    background-color: #fff;
+    will-change: auto;
+    transition: all .4s ease-in-out
+}
+
+body.project-view .close-project-view-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1.6rem 3rem 2.3rem;
+    display: block;
+    cursor: pointer;
+    border: 0;
+    will-change: auto;
+    transition: all 0.4s ease-in-out;
+}
+body.project-view .close-project-view-button i {
+    display: block;
+    width: 2.1rem;
+    height: 1px;
+    -webkit-transform: rotate(135deg) translate3d(0, 0, 0);
+    -moz-transform: rotate(135deg) translate3d(0, 0, 0);
+    -ms-transform: rotate(135deg) translate3d(0, 0, 0);
+    -o-transform: rotate(135deg) translate3d(0, 0, 0);
+    transform: rotate(135deg) translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin-top: 8px;
+    background-color: white;
+}
+body.project-view .close-project-view-button i:nth-child(2) {
+    -webkit-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -moz-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -ms-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -o-transform: rotate(-135deg) translate3d(0, 0, 0);
+    transform: rotate(-135deg) translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin-top: -1px;
+}
+
+body.project-view .close-project-view-button i:nth-child(3) {
+    opacity: 0;
+    transition: all 0.6s ease-in-out;
+}
+
+.menu-button i+i {
+    margin-top: 7px
+}
+
+body.menu-open .menu-button i {
+    -webkit-transform: rotate(135deg) translate3d(0, 0, 0);
+    -moz-transform: rotate(135deg) translate3d(0, 0, 0);
+    -ms-transform: rotate(135deg) translate3d(0, 0, 0);
+    -o-transform: rotate(135deg) translate3d(0, 0, 0);
+    transform: rotate(135deg) translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin-top: 8px
+}
+
+body.menu-open .menu-button i+i {
+    -webkit-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -moz-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -ms-transform: rotate(-135deg) translate3d(0, 0, 0);
+    -o-transform: rotate(-135deg) translate3d(0, 0, 0);
+    transform: rotate(-135deg) translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin-top: -1px
+}
+
+body.menu-open .menu-button i+i+i {
+    -webkit-transform: translateY(2.5rem) translate3d(0, 0, 0);
+    -moz-transform: translateY(2.5rem) translate3d(0, 0, 0);
+    -ms-transform: translateY(2.5rem) translate3d(0, 0, 0);
+    -o-transform: translateY(2.5rem) translate3d(0, 0, 0);
+    transform: translateY(2.5rem) translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    margin: 0
+}
+
+body.menu-open .menu-button i,
+body.search-open .menu-button i,
+body[data-loading="false"] header.opaque .menu-button i 
+{
+    /*background-color: #121212*/
+    background-color: white;
+}
+
+
+body.menu-open .menu-button i:nth-child(3),
+body.search-open .menu-button i:nth-child(3),
+body[data-loading="false"] header.opaque .menu-button i:nth-child(3)
+{
+    opacity: 0;
+    transition: all 0.6s ease-in-out;
+}
+
+.menu-button:focus {
+    background-color: rgba(255, 255, 255, 0.25)
+}
+
+body.menu-open .menu-button:focus,
+body.search-open .menu-button:focus,
+body[data-loading="false"] header.opaque .menu-button:focus {
+    background-color: rgba(18, 18, 18, 0.25)
+}
+
