--- a/resources/style.css
+++ b/resources/style.css
@@ -2430,17 +2430,17 @@ body:not(.touchscreen) .project-filters {
     letter-spacing: normal
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-device-width: 700px) {
     .project-filters .select-wrap {
         display: flex;
-        width: 50%;
+        width: 100%;
         min-width: 200px;
         border-right: 1px solid;
         position: relative
     }
 }
 
-@media only screen and (min-width: 701px) {
+@media only screen and (min-device-width: 701px) {
     .project-filters .select-wrap {
         display: flex;
         width: 25%;
@@ -2474,15 +2474,11 @@ body:not(.touchscreen) .project-filters {
         display: -ms-flexbox;
         display: -webkit-flex;
         display: flex;
-        flex-basis: 95%;
+        flex-basis: 100%;
         -webkit-align-items: flex-start;
         align-items: flex-start;
         -webkit-justify-content: space-between;
         justify-content: space-between
-    }
-
-    .project-filters nav+nav {
-        flex-basis: 5%
     }
 
     .project-filters .select-wrap label {
