--- a/resources/style.css
+++ b/resources/style.css
@@ -179,7 +179,7 @@ input[type="radio"] {
 
 input[type="checkbox"] {
     vertical-align: bottom;
-    
+
 }
 
 .ie6 input {
@@ -286,13 +286,6 @@ body>.fullscreen button {
     border: 1px solid
 }
 
-.skip-to-content:focus,
-.admin-edit a:focus,
-.content .button:focus,
-.content button:focus:not(.x),
-body>.fullscreen button:focus {
-    color: #ea0000
-}
 
 .split .split-image.object-square img,
 .split .split-image.object-cover img,
@@ -2430,24 +2423,54 @@ body:not(.touchscreen) .project-filters {
     letter-spacing: normal
 }
 
+.project-filters {
+    display: flex;
+    width: 100%;
+    min-width: 200px;
+    border-right: 1px solid;
+    position: relative;
+    box-sizing: content-box;
+}
+
 @media only screen and (max-device-width: 700px) {
-    .project-filters .select-wrap {
-        display: flex;
-        width: 100%;
-        min-width: 200px;
-        border-right: 1px solid;
-        position: relative
+    .project-filters {
+        height: 50px;
     }
 }
 
 @media only screen and (min-device-width: 701px) {
-    .project-filters .select-wrap {
-        display: flex;
-        width: 25%;
-        min-width: 200px;
-        border-right: 1px solid;
-        position: relative
+    .project-filters {
+        height: 30px;
     }
+}
+
+.project-filters button.project-type-btn {
+    width: 25%;
+    border: 0px solid black;
+    border-right: 1px solid black;
+    height: inherit;
+}
+
+.project-filters button.project-type-btn:after {
+    content: '';
+    height: 100%; 
+    width: 15px;
+    
+    position: relative;
+    left: 0;
+    top: 0;
+    
+    background-color: #000000;
+  }
+  
+
+button.project-type-btn.selected {
+    color: floralwhite;
+    background-color: #3f3934;
+}
+
+button.project-type-btn:hover {
+    border: 1px solid black;
 }
 
 @media only screen and (min-width: 0px) {
@@ -2458,7 +2481,6 @@ body:not(.touchscreen) .project-filters {
         display: -webkit-flex;
         display: flex;
         width: 100%;
-        height: 3rem;
         -webkit-justify-content: space-between;
         justify-content: space-between
     }
